# summiva

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  commit_message.txt  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  print.md  pubspec.yaml  requirements.md  restructure.ps1  test.ipynb
backend/: .env  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  settings.py
backend/auth-service/: Dockerfile  docker-compose.yml  readme.md  requirements.txt
backend/auth-service/src/: main.py
backend/auth-service/src/config/: settings.py
backend/auth-service/src/core/: auth_logic.py
backend/auth-service/src/database/: session.py
backend/auth-service/src/models/: user.py
backend/auth-service/src/schemas/: user_schemas.py
backend/celery_tasks/worker/: celery_app.py  tasks.py
backend/grouping_service/: Dockerfile  requirements.txt
backend/grouping_service/src/: main.py
backend/grouping_service/src/core/: grouper.py
backend/grouping_service/src/database/: mongo_session.py  postgres_session.py
backend/grouping_service/src/models/: summary.py
backend/search_service/src/: main.py
backend/search_service/src/celery_tasks/: worker.py
backend/search_service/src/core/: faiss_index.py
backend/summarization_service/: .env  Dockerfile  docker-compose.yml  gunicorn_config.py  requirements.txt
backend/summarization_service/src/: main.py
backend/summarization_service/src/celery_tasks/: worker.py
backend/summarization_service/src/config/: settings.py
backend/summarization_service/src/core/: summarizer.py
backend/summarization_service/src/database/: mongo_session.py
backend/summarization_service/src/services/: content_ingestion.py
backend/summarization_service/src/utils/: logging.py  security.py
backend/tagging_service/: .env  docker-compose.yml
backend/tagging_service/src/: main.py
backend/tagging_service/src/core/: tagger.py
backend/tagging_service/src/database/: postgres_session.py
backend/tagging_service/src/services/: content_ingestion.py
src/backend/: Makefile  README.md  __init__.py  alembic.ini  entrypoint.sh  gunicorn_config.py  main.py  module_paths.py  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements-temp.txt  requirements.txt  settings.py
src/backend/apps/auth/: routes.py  schemas.py  utils.py
src/backend/apps/grouping/: routes.py  services.py
src/backend/apps/search/: routes.py
src/backend/apps/summarization/: models.py  routes.py  schemas.py
src/backend/apps/tagging/: routes.py  schemas.py
src/backend/auth/: .gitignore  config.py  database.py  entrypoint.sh  gunicorn_config.py  main.py  readme.md  requirements.txt  utils.py  wsgi.py
src/backend/core/: dependencies.py  imports.py  message_queue.py  service_init.py  service_registry.py  utils.py
src/backend/grouping/: __init__.py  main.py
src/backend/migrations/: env.py
src/backend/models/: model_server.py  requirements.txt
src/backend/moderation/: __init__.py  main.py
src/backend/search/: __init__.py  database.py  main.py  requirements.txt
src/backend/summarization/: __init__.py  main.py  requirements.txt  tasks.py
src/backend/tagging/: __init__.py  main.py  requirements.txt
src/backend/tests/: conftest.py  test_auth_api.py
src/backend/utils/: html_processor.py  paths.py  validate_modules.py
(+324 files in other folders)
